Fix nav spacing and project top margin

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -171,6 +171,10 @@ margin-right: 20px;
 align-items: center;
 }
 
+.nav__container__actions ul{
+  gap: 1rem;
+}
+
 a {
   font-size: 1.5em;
 }
