--- a/src/css/Contact.css
+++ b/src/css/Contact.css
@@ -28,6 +28,7 @@
   font-family: "Lato", sans-serif;
   font-weight: 900;
   border: #de5499 1.5px solid;
+  resize: none;
 
 }
 
